added potfolio project

--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
 				<div class="row justify-content-center">
 
 					<div class="card col-md-4" id="card3">
-						<img src="./images/Responsive-landing.jpg" class="card-img-top" alt="...">
+						<img src="./images/portfolio.png" class="card-img-top" alt="...">
 						<div class="card-body">
-							<h5 class="card-title">Songify</h5>
-							<p class="card-text">A responsive landing page for a fictional music streaming service.
+							<h5 class="card-title">Portfolio Site</h5>
+							<p class="card-text">My own portfolio created with a focus on responsive web design.
 							</p>
 							<div id="tech">
 								<span>HTML5</span> <span>CSS3</span> <span>Bootstrap</span> <span>JavaScript</span>
 							</div>
 							<div id="project-btn">
-								<a href="https://zacsiegel.github.io/Landing-page/" target="_blank" class="demo-btn"><i
+								<a href="https://www.zacsiegel.com/" target="_blank" class="demo-btn"><i
 										class="fas fa-eye"></i> Demo</a>
-								<a href="https://github.com/ZacSiegel/Landing-page" target="_blank" class="src-btn"><i
+								<a href="https://github.com/ZacSiegel/portfolio" target="_blank" class="src-btn"><i
 										class="fas fa-code"></i> Code</a>
 							</div>
 						</div>
