--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 						<img src="./images/portfolio.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">Portfolio Site</h5>
-							<p class="card-text">My own portfolio created with a focus on responsive web design.
+							<p class="card-text">This portfolio created with a focus on responsive web design. Uses HTML
+								canvas and JavaScript for the background animation.
 							</p>
 							<div id="tech">
 								<span>HTML5</span> <span>CSS3</span> <span>Bootstrap</span> <span>JavaScript</span>
