Adjustments for cross-browser compatibility

--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
 				</div>
 			</section>
 
-			<!-- Skills Section -->
-
 			<!-- About Me -->
 			<section id="about" class="main">
 				<div class="spotlight">
@@ -173,10 +171,13 @@
 						<header class="major">
 							<h2 class="about-title">About Me</h2>
 						</header>
-						<p class="about-description">I'm Zac, a front-end web developer with a passion for learning.
+						<p class="about-description">I'm Zac, a front-end web developer with a passion for learning and
+							being creative.
 							Whether it's
-							websites, apps, music, or games, I am fascinated with learning how technology impacts all of
-							these. Currently pursuing a B.S. in Information Technology.
+							music, web apps, or games, I am fascinated with learning how technology impacts all of
+							these. The combination of creativity, logic, and technology drives my passion for web
+							development. Currently pursuing
+							a B.S. in Information Technology.
 						</p>
 						<a href="Zac-Siegel-resume.pdf" target="_blank"> <button id="download"><i
 									class="far fa-file-alt"></i> Download
@@ -269,7 +270,7 @@
 					</div>
 				</header>
 				<section class="contact-form" id="contact">
-					<form action="https://formsubmit.co/zac.siegel89@gmail.com" method="POST">
+					<form action="https://formsubmit.co/fec2c0679fede30ea92da70235341f57" method="POST">
 						<div class="row justify-content-center">
 
 							<div class="col-10 col-md-6 mb-3">
