--- a/thank_you.html
+++ b/thank_you.html
@@ -15,17 +15,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="thank_you.css" />
-
 </head>
 
 <body>
     <canvas></canvas>
     <h1>Thank you!</h1>
 
-    <p>I will try to get back to you within 24 hours. Take care!</p>
+    <p>I will get back to you within 24 hours.</p>
     <div class="black-hole-container">
         <div class="bh"></div>
     </div>
+    <form class="btn-container" action="index.html">
+        <button action="submit">Go back</button>
+    </form>
 
     <script src="assets/js/canvas.js"></script>
     <script src="assets/js/jquery.min.js"></script>
