Added new MERN project

--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
 				<div class="row justify-content-center">
 
 					<div class="card col-md-4" id="card1">
+						<img src="./images/sight-share.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">SightShare</h5>
+							<p class="card-text">A fullstack social media app that uses the MERN stack. Users can upload pictures with their posts along with hashtags.
+							Users can also edit, like or delete posts.</p>
+							<div id="tech">
+								<span>React</span> <span>Redux</span> <span>Node.js</span><span>Express.js</span> <span>MongoDB</span>
+							</div>
+							<div id="project-btn">
+								<a href="https://sightshare.netlify.app/" target="_blank" class="demo-btn"><i
+										class="fas fa-eye"></i> Demo</a>
+								<a href="https://github.com/ZacSiegel/Sight-Share" target="_blank" class="src-btn"><i
+										class="fas fa-code"></i> Code</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="card col-md-4" id="card2">
 						<img src="./images/chat-app.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">ColorChat</h5>
@@ -97,26 +115,8 @@
 							<div id="project-btn">
 								<a href="https://zac-siegel-chat-app.herokuapp.com/" target="_blank" class="demo-btn"><i
 										class="fas fa-eye"></i> Demo</a>
-								<a href="https://github.com/ZacSiegel/Chat-app" target="_blank" class="src-btn"><i
-										class="fas fa-code"></i> Code</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="card col-md-4" id="card2">
-						<img src="./images/Weather-app.jpg" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Weather App</h5>
-							<p class="card-text">A weather app that fetches data using the OpenWeatherMap API to display
-								weather conditions for a given city.</p>
-							<div id="tech">
-								<span>HTML5</span> <span>CSS3</span> <span>JavaScript</span>
-							</div>
-							<div id="project-btn">
-								<a href="https://zacsiegel.github.io/Weather-app/" target="_blank" class="demo-btn"><i
-										class="fas fa-eye"></i> Demo</a>
-								<a href="https://github.com/ZacSiegel/Weather-app" target="_blank" class="src-btn"><i
-										class="fas fa-code"></i> Code</a>
+								<a href="https://github.com/ZacSiegel/Chat-app" target="_blank" class="src-btn"><i class="fas fa-code"></i>
+									Code</a>
 							</div>
 						</div>
 					</div>
@@ -145,19 +145,19 @@
 					</div>
 
 					<div class="card col-md-4" id="card4">
-						<img src="./images/workout.jpg" class="card-img-top" alt="...">
+						<img src="./images/Weather-app.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
-							<h5 class="card-title">Workout Tracker</h5>
-							<p class="card-text">A CRUD app that allows the user to add exercises and filter them
-								by days of the week. Uses local storage to save data.</p>
+							<h5 class="card-title">Weather App</h5>
+							<p class="card-text">A weather app that fetches data using the OpenWeatherMap API to display
+								weather conditions for a given city.</p>
 							<div id="tech">
-								<span>HTML5</span> <span>CSS3</span> <span>Bootstrap</span> <span>JavaScript</span>
+								<span>HTML5</span> <span>CSS3</span> <span>JavaScript</span>
 							</div>
 							<div id="project-btn">
-								<a href="https://zacsiegel.github.io/Exercise-tracker-app/" target="_blank"
-									class="demo-btn"><i class="fas fa-eye"></i> Demo</a>
-								<a href="https://github.com/ZacSiegel/Exercise-tracker-app" target="_blank"
-									class="src-btn"><i class="fas fa-code"></i> Code</a>
+								<a href="https://zacsiegel.github.io/Weather-app/" target="_blank" class="demo-btn"><i
+										class="fas fa-eye"></i> Demo</a>
+								<a href="https://github.com/ZacSiegel/Weather-app" target="_blank" class="src-btn"><i
+										class="fas fa-code"></i> Code</a>
 							</div>
 						</div>
 					</div>
