Changed navbar styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Zac Siegel - Front-end developer</title>
+	<title>Zac Siegel - Web developer</title>
 	<meta name="description" content="Zac Siegel portfolio website">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -60,7 +60,7 @@
 			<canvas></canvas>
 			<div id="title">
 				<h1 id="name-title">Zac Siegel</h1>
-				<p id="job">Front-end Developer</p>
+				<p id="job">Web Developer</p>
 			</div>
 
 			<div class="black-hole-container">
@@ -80,11 +80,13 @@
 				<header class="major">
 					<h2 class="projects-header">Projects</h2>
 				</header>
+				
 
 				<!-- Project Row 1 -->
 				<div class="row justify-content-center">
 
 					<div class="card col-md-4" id="card1">
+
 						<img src="./images/sight-share.png" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">SightShare</h5>
@@ -171,7 +173,7 @@
 						<header class="major">
 							<h2 class="about-title">About Me</h2>
 						</header>
-						<p class="about-description">I'm Zac, a front-end web developer with a passion for learning and
+						<p class="about-description">I'm Zac, a web developer with a passion for learning and
 							being creative.
 							Whether it's
 							music, web apps, or games, I am fascinated with learning how technology impacts all of
@@ -219,10 +221,10 @@
 									<div>React</div>
 								</div>
 							</div>
-							<div class="skills-item-container" id="python">
+							<div class="skills-item-container" id="mongodb">
 								<div class="skills-item">
-									<img src="images/python.png">
-									<div>Python</div>
+									<img src="images/mongodb.png">
+									<div>MongoDB</div>
 								</div>
 							</div>
 							<div class="skills-item-container" id="node">
