Refactoring css with scss

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Font-Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<!-- CSS -->
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="index.css" />
 
 	<!-- Scroll Reveal -->
 	<script src="https://unpkg.com/scrollreveal"></script>
@@ -250,8 +250,8 @@
 							</div>
 							<div class="skills-item-container" id="bash">
 								<div class="skills-item">
-									<img src="images/bash.png">
-									<div>Bash CLI</div>
+									<img src="images/sass.png">
+									<div>Sass</div>
 								</div>
 							</div>
 						</div>
