--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								canvas and JavaScript for the background animation.
 							</p>
 							<div id="tech">
-								<span>HTML5</span> <span>CSS3</span> <span>Bootstrap</span> <span>JavaScript</span>
+								<span>HTML5</span> <span>SCSS</span> <span>Bootstrap</span> <span>JavaScript</span>
 							</div>
 							<div id="project-btn">
 								<a href="https://www.zacsiegel.com/" target="_blank" class="demo-btn"><i
