Adjusted contacted form section width.

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					<form action="https://formsubmit.co/fec2c0679fede30ea92da70235341f57" method="POST">
 						<div class="row justify-content-center">
 
-							<div class="col-10 col-md-12 mb-3">
+							<div class="col-12 col-md-8 col-sm-12 col-xs-12 mb-3">
 								<input type="text" name="name" class="form-control" id="name" placeholder="Name"
 									required>
 							</div>
@@ -284,7 +284,7 @@
 						<input type="hidden" name="_next" value="https://www.zacsiegel.com/thank_you.html">
 
 						<div class="row justify-content-center">
-							<div class="col-10 col-md-12 mb-3">
+							<div class="col-12 col-md-8 col-sm-12 col-xs-12 mb-3">
 
 								<input type="email" name="email" class="form-control" id="email" placeholder="Email"
 									required>
@@ -292,7 +292,7 @@
 						</div>
 
 						<div class="row justify-content-center">
-							<div class="col-10 col-md-12 mb-3">
+							<div class="col-12 col-md-8 col-sm-12 col-xs-12 mb-3">
 
 								<textarea type="text" name="message" class="form-control" id="message" rows="8"
 									placeholder="Enter message here"></textarea>
