--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							<div class="tech-and-button-wrapper">
 								<div id="tech">
 									<span>React</span> <span>Redux</span> <span>Node.js</span><span>Express.js</span>
-									<span>MongoDB</span>
+									<span>MongoDB</span> <span>Material UI</span>
 								</div>
 								<div id="project-btn">
 									<a href="https://sightshare.netlify.app/" target="_blank" class="demo-btn"><i
@@ -147,6 +147,36 @@
 
 					<div class="project-row card col-md-4" id="card1">
 
+						<div class="card-body">
+							<h5 class="card-title">Trip Tips</h5>
+							<p class="card-text">A web app built for my capstone class project. Users can search for
+								locations and view the businesses available in that area. Users
+								can filter places by type (restaurant, hotel, etc.) and/or rating and view the details of each place.
+								Users can also add places to their favorites list. Features a dark mode. </p>
+							<div class="tech-and-button-wrapper">
+
+								<div id="tech">
+									<span>React</span> <span>Material UI</span>
+									<span>JavaScript</span><span>CSS</span><span>Google Maps API</span>
+								</div>
+								<div id="project-btn">
+									<a href="https://trip-tips.netlify.app/" target="_blank" class="demo-btn"><i
+											class="fas fa-eye"></i> Demo</a>
+									<a href="https://github.com/ZacSiegel/Capstone-travel-app" target="_blank"
+										class="src-btn"><i class="fas fa-code"></i>
+										Code</a>
+								</div>
+							</div>
+						</div>
+						<div class="image-wrapper">
+							<img src="./images/trip_tips_light.png" class="card-img-top" alt="...">
+						</div>
+					</div>
+
+					<div class="project-row card col-md-4" id="card2">
+						<div class="image-wrapper">
+							<img src="./images/chat-app.jpg" class="card-img-top" alt="...">
+						</div>
 						<div class="card-body">
 							<h5 class="card-title">ColorChat</h5>
 							<p class="card-text">A chat application that uses web sockets to allow real-time messaging
@@ -167,30 +197,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="image-wrapper">
-							<img src="./images/chat-app.jpg" class="card-img-top" alt="...">
-						</div>
-					</div>
 
-					<!-- <div class="project-row card col-md-4" id="card3">
-						<img src="./images/portfolio.png" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">Portfolio Site</h5>
-							<p class="card-text">This portfolio created with a focus on responsive web design. Uses HTML
-								canvas and JavaScript for the background animation.
-							</p>
-							<div id="tech">
-								<span>HTML5</span> <span>SCSS</span> <span>Bootstrap</span> <span>JavaScript</span>
-							</div>
-							<div id="project-btn">
-								<a href="https://www.zacsiegel.com/" target="_blank" class="demo-btn"><i
-										class="fas fa-eye"></i> Demo</a>
-								<a href="https://github.com/ZacSiegel/portfolio" target="_blank" class="src-btn"><i
-										class="fas fa-code"></i>
-									Code</a>
-							</div>
-						</div>
-					</div> -->
+					</div>
 				</div>
 			</section>
 
@@ -206,8 +214,7 @@
 							Whether it's
 							music, web apps, or games, I am fascinated with learning how technology impacts all of
 							these. The combination of creativity, logic, and technology drives my passion for web
-							development. Currently pursuing
-							a B.S. in Information Technology.
+							development. New grad with B.S. in Information Technology.
 						</p>
 						<a href="Zac-Siegel-resume.pdf" target="_blank"> <button id="download"><i
 									class="far fa-file-alt"></i> Download
@@ -251,8 +258,8 @@
 							</div>
 							<div class="skills-item-container" id="mongodb">
 								<div class="skills-item">
-									<img src="images/figma.png">
-									<div>Figma</div>
+									<img src="images/mui.png">
+									<div>MUI</div>
 								</div>
 							</div>
 							<div class="skills-item-container" id="node">
