Adjusted scroll animations. Re-organized projects.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,42 @@
 
 					<div class="project-row card col-md-4" id="card2">
 						<div class="image-wrapper">
-							<img src="./images/sight-share.png" class="card-img-top" alt="...">
+							<img src="./images/trip_tips_light.png" class="card-img-top" alt="...">
 						</div>
+						<div class="card-body">
+							<h5 class="card-title">Trip Tips</h5>
+							<p class="card-text">A web app built for my capstone class project. Users can search for
+								locations and view the businesses available in that area. Users
+								can filter places by type (restaurant, hotel, etc.) and/or rating and view the details
+								of each place.
+								Users can also add places to their favorites list. Features a dark mode. </p>
+							<div class="tech-and-button-wrapper">
+
+								<div id="tech">
+									<span>React</span> <span>Material UI</span>
+									<span>JavaScript</span><span>CSS</span><span>Google Maps API</span>
+								</div>
+								<div id="project-btn">
+									<a href="https://trip-tips.netlify.app/" target="_blank" class="demo-btn"><i
+											class="fas fa-eye"></i>
+										Demo</a>
+									<a href="https://github.com/ZacSiegel/Capstone-travel-app" target="_blank"
+										class="src-btn"><i class="fas fa-code"></i>
+										Code</a>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+
+				</div>
+
+				<!-- Project row 2 -->
+				<div class="row justify-content-center">
+
+					<div class="project-row card col-md-4" id="card1">
+						
 						<div class="card-body">
 							<h5 class="card-title">SightShare</h5>
 							<p class="card-text">A fullstack social media app that uses the MERN stack. Users can upload
@@ -139,37 +173,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-
-				<!-- Project row 2 -->
-				<div class="row justify-content-center">
-
-					<div class="project-row card col-md-4" id="card1">
-
-						<div class="card-body">
-							<h5 class="card-title">Trip Tips</h5>
-							<p class="card-text">A web app built for my capstone class project. Users can search for
-								locations and view the businesses available in that area. Users
-								can filter places by type (restaurant, hotel, etc.) and/or rating and view the details of each place.
-								Users can also add places to their favorites list. Features a dark mode. </p>
-							<div class="tech-and-button-wrapper">
-
-								<div id="tech">
-									<span>React</span> <span>Material UI</span>
-									<span>JavaScript</span><span>CSS</span><span>Google Maps API</span>
-								</div>
-								<div id="project-btn">
-									<a href="https://trip-tips.netlify.app/" target="_blank" class="demo-btn"><i
-											class="fas fa-eye"></i> Demo</a>
-									<a href="https://github.com/ZacSiegel/Capstone-travel-app" target="_blank"
-										class="src-btn"><i class="fas fa-code"></i>
-										Code</a>
-								</div>
-							</div>
-						</div>
 						<div class="image-wrapper">
-							<img src="./images/trip_tips_light.png" class="card-img-top" alt="...">
+							<img src="./images/sight-share.png" class="card-img-top" alt="...">
 						</div>
 					</div>
 
